# ZotLink

./: CHANGES.md  Justfile  README.md  cleanup_chinese.py  flatpak_config.py  opencode.json  pyproject.toml
docs/: MCP-SETUP.md
scripts/: list_tools.py
tests/: test_zotlink.py
zotlink/: pdf_fetcher.py  zotero_integration.py  zotero_mcp_server.py
zotlink/extractors/: arxiv_extractor.py  base_extractor.py  browser_extractor.py  enhanced_generic_extractor.py  extractor_manager.py
zotlink/utils/: __init__.py  author_parser.py  browser_config.py  date_parser.py
